crates/reinhardt-core/macros/tests/ui/newtype/fail/multi_field.rs
//! Multi-field structs cannot be newtypes.

use reinhardt_macros::newtype;

#[newtype]
pub struct Bad(u64, u64);

fn main() {}
